--- a/scss/global/_boilerplate.scss
+++ b/scss/global/_boilerplate.scss
@@ -12,7 +12,9 @@
 body {
 	font-size: 16px;
 	min-height: 100vh;
+	width: 100vw;
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 img {
